tests/src/frontend/syntax/invalid/explicit_targs4.sk
class Foo() {
  fun foo<T>(T): void {
    void
  }
}

fun test(): void {
  _ = Foo().foo<Bool>(0);
  void
}
